--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -74,3 +74,14 @@
     @apply bg-background text-foreground;
   }
 }
+
+.row {
+  display: flex;
+  align-items: center;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
