--- a/app/src/components/VideoRecommendations.scss
+++ b/app/src/components/VideoRecommendations.scss
@@ -1,10 +1,9 @@
 
 .videoRecommendation {
     width: 100%;
-    max-width: 360px;
+    max-width: 320px;
     border-radius: 10px;
     margin: 1rem;
-    padding-bottom: 1rem;
     border: solid 1px #ffffff10;
     border-top: 0;
     
@@ -17,6 +16,7 @@
     .miniature {
         width: 100%;
         height: 11rem;
+        height: 180px;
         border-radius: 10px;
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
